--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,17 @@ dependencies:
   get_it: ^7.1.3
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  flutter_bloc: ^7.1.0
+  firebase_core: ^1.6.0
+  firebase_crashlytics: ^2.6.0
+
+
 
 
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  bloc_test:
   flutter_test:
     sdk: flutter
 
